# quizzer

./: .gitignore  README.md  app.db  autoapp.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.js
migrations/versions/: 1144862e407c_add_fingerprint_to_poll_answer_votes.py  1c96861c6216_.py  445dc12c6616_add_polls_tables.py  b026997f27d9_add_ip_address_column_to_poll_answer_.py
quizzer/: app.py  database.py  extensions.py  settings.py  utils.py
quizzer/api/models/: __init__.py
quizzer/api/models/game/: models.py
quizzer/api/models/polls/: models.py
quizzer/api/resources/: __init__.py
quizzer/api/resources/game/: verse_game.py
quizzer/api/resources/polls/: polls.py
quizzer/public/: __init__.py  views.py
quizzer/static/css/: output.css
quizzer/templates/: base.html  client.html  family_feud.html  files.html  game_master.html  poll.html  poll_admin.html  pope.html
src/: App.vue  ComponentPicker.vue  Poll.vue  main.js  socket.js
src/assets/: output.css
src/components/: Login.vue  MultipleChoiceClient.vue  TextAlert.vue
src/components/camp/: Camp.vue  CampManager.vue
src/components/church/: QuickBooks.vue
src/components/events/: Camelot.vue  EventManager.vue  SeeTheGift.vue
src/components/game/: Client.vue  GameMaster.vue  MemoryVerseClient.vue  MemoryVerseGM.vue  Zonk.vue
src/components/utility/: Button.vue  Editor.vue  Modal.vue  Table.vue  dinero.js
src/stores/: baseUrl.js
