[project]
name = "quizzer"
version = "0.1.0"
description = "Quiz application"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "aniso8601>=10.0.0",
    "blinker>=1.9.0",
    "certifi>=2025.1.31",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "cryptography>=44.0.2",
    "Flask>=3.1.0",
    "flask-cors>=5.0.1",
    "Flask-Migrate>=4.1.0",
    "Flask-RESTful>=0.3.10",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-SSLify>=0.1.5",
    "greenlet>=3.1.1",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.6",
    "Mako>=1.3.10",
    "MarkupSafe>=3.0.2",
    "ndg-httpsclient>=0.5.1",
    "psycopg2>=2.9.10",
    "pusher>=3.3.3",
    "pyasn1>=0.6.1",
    "pycparser>=2.22",
    "PyNaCl>=1.5.0",
    "pyOpenSSL>=25.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "six>=1.17.0",
    "SQLAlchemy>=2.0.40",
    "typing_extensions>=4.13.2",
    "urllib3>=2.4.0",
    "Werkzeug>=3.1.3",
]

[tool.uv]
dev-dependencies = []
